Fix horizontal scroll bug

--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-direction: column;
 
-    height: 100vh;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 
 /* Navbar styling */
